Fix article items spacing

--- a/static/home.css
+++ b/static/home.css
@@ -387,7 +387,7 @@ _::-webkit-full-page-media, _:future, :root .main-article-border {
   z-index: 100;
   padding: 5px;
   color: #ffffff;
-  max-width: 90%;
+  width: 90%;
   padding-left: 20px;
   padding-right: 20px;
 }
